--- a/client/package.json
+++ b/client/package.json
@@ -5,20 +5,17 @@
   "dependencies": {
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
-    "@mui/icons-material": "^5.10.16",
-<<<<<<< HEAD
-    "@mui/material": "^5.10.15",
-=======
     "@mui/material": "^5.10.16",
->>>>>>> 50a2fab34c6f1fd87a844e5a7ccda481dfc3e113
-    "@mui/styled-engine-sc": "^5.10.14",
+    "@mui/styled-engine-sc": "^5.10.16",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "aos": "^2.3.4",
     "axios": "^1.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.6.0",
+    "react-loading-skeleton": "^3.1.0",
     "react-rating-stars-component": "^2.2.0",
     "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
