--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,8 @@
     "aos": "^2.3.4",
     "axios": "^1.2.0",
     "react": "^18.2.0",
+    "react-alert": "^7.0.3",
+    "react-alert-template-basic": "^1.0.2",
     "react-dom": "^18.2.0",
     "react-icons": "^4.6.0",
     "react-loading-skeleton": "^3.1.0",
