--- a/server/package.json
+++ b/server/package.json
@@ -21,6 +21,7 @@
     "mongoose": "^6.7.2",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^2.0.20",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "razorpay": "^2.8.4"
   }
 }
