--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "@testing-library/user-event": "^13.5.0",
     "aos": "^2.3.4",
     "axios": "^1.2.0",
+    "dayjs": "^1.11.5",
     "razorpay": "^2.8.4",
     "react": "^18.2.0",
     "react-alert": "^7.0.3",
