--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "aos": "^2.3.4",
     "axios": "^1.2.0",
     "dayjs": "^1.11.5",
+    "nodemailer": "^6.8.0",
     "razorpay": "^2.8.4",
     "react": "^18.2.0",
     "react-alert": "^7.0.3",
