--- a/client/package.json
+++ b/client/package.json
@@ -6,7 +6,7 @@
     "@emailjs/browser": "^3.10.0",
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
-    "@mui/icons-material": "^5.10.16",
+    "@mui/icons-material": "^5.11.0",
     "@mui/material": "^5.10.15",
     "@mui/styled-engine-sc": "^5.10.16",
     "@reduxjs/toolkit": "^1.9.1",
@@ -19,14 +19,13 @@
     "nodemailer": "^6.8.0",
     "razorpay": "^2.8.4",
     "react": "^18.2.0",
-    "react-alert": "^7.0.3",
-    "react-alert-template-basic": "^1.0.2",
+    "react-content-loader": "^6.2.1",
     "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^4.6.0",
     "react-loading-skeleton": "^3.1.0",
     "react-rating-stars-component": "^2.2.0",
     "react-redux": "^8.0.5",
-    "react-reveal": "^1.2.2",
     "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
     "styled-components": "^5.3.6",
