--- a/server/package.json
+++ b/server/package.json
@@ -25,6 +25,7 @@
     "nodemailer": "^6.8.0",
     "nodemon": "^2.0.20",
     "path": "^0.12.7",
-    "razorpay": "^2.8.4"
+    "razorpay": "^2.8.4",
+    "streamifier": "^0.1.1"
   }
 }
