--- a/client/package.json
+++ b/client/package.json
@@ -13,12 +13,12 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "aos": "^2.3.4",
     "axios": "^1.2.0",
     "dayjs": "^1.11.5",
     "nodemailer": "^6.8.0",
     "razorpay": "^2.8.4",
     "react": "^18.2.0",
+    "react-awesome-reveal": "^4.2.5",
     "react-content-loader": "^6.2.1",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
